src/tests/test-src/errors/E5-bad-oct32.syntran
// E5: bad-oct32
// Octal integer literal that doesn't fit in 32 bits

let a = 1;

let o = 0o77777777777'i32;
println(a);
